# projectzero

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  pytest.ini  run.py  zero.instructions.md
.clinerules/: default-rules.md  zero.instructions.md
perf/: bench_ecs.py  clampy.py  generational.py  one.py
profile/: bench_genc.py
scripts/: dump_state.py  read_profile.py
src/sim/ai/: brain.py  context.py
src/sim/common/: enum.py  logging.py  math.py
src/sim/ecs/: core.py  query.py  system.py
src/zero/: __init__.py  tui.py
src/zero/ai/: context.py
src/zero/simulation/: entities.py
src/zero/simulation/functional/: stat_ops.py
src/zero/simulation/systems/: hunger.py  instinct.py  perception.py  photosynthesis.py  reproduction.py  stats.py  world.py
tests/: __init__.py  conftest.py
tests/sim/: test_ecs_core.py  test_enum.py  test_generational.py  test_generational_dict.py  test_imperfect_memory.py  test_math.py  test_memory.py  test_running_stats.py
tests/simz/: test_math.py  test_memory.py
tests/tigen/: test_ecs_core.py  test_enum.py  test_generational.py  test_generational_dict.py  test_imperfect_memory.py  test_math.py  test_memory.py  test_running_stats.py
tests/zero/: test_actuation_system.py  test_ai_predefined_primitive.py  test_energy_system.py  test_growth_system.py  test_health_system.py  test_human_startup.py  test_hunger_system.py  test_photosynthesis_system.py  test_planner.py  test_predefined_brains.py  test_reasoning_system.py  test_reproduction_system.py  test_stat_ops.py
